fix final ie bug, vertical align, using flex container for thumbnails 🎉

--- a/css/src/az.css
+++ b/css/src/az.css
@@ -369,7 +369,7 @@ body, .h0, h1, h2, h3, h4, h5, h6 {
   .sm-right-align { text-align: right; }
   .sm-left-align { text-align: left; }
   .sm-flex { display:flex;}
-  .sm-align-start { align-items: flex-start; }
+  .sm-align-items-start { align-items: flex-start; }
   .sm-justify-start { justify-content: flex-start; }
   .sm-justify-around { justify-content: space-around; }
   .sm-justify-between { justify-content: space-between; }
